# cursor-config

./: README.md  bootstrap.sh
global/: AGENTS_GLOBAL.md  mcp.json
global/commands/: build.md  cycle_code.md  test-write.md
project-template/ds-project/: .pre-commit-config.yaml  configure_package.py  pyproject.toml
project-template/ds-project/.cursor/commands/: parquet-dict.md  parquet-map.md  review.md  test-fix.md
project-template/ds-project/.cursor/rules/: 00-base.mdc  10-python-quality.mdc  ds-core.mdc  ds-data.mdc  ds-ml.mdc
project-template/ds-project/doc/: DATA_DICTIONARY.md  EVAL_REPORT.md  EXPERIMENT_LOG.md  INVESTIGATION_LOG.md  RISK_LOG.md  RUNBOOK.md
